; ModuleID = '/home/carl/AnghaBench/redis/src/extr_scripting.c_ldbFlushLog.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_scripting.c_ldbFlushLog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ldbFlushLog(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  br label %4

4:                                                ; preds = %8, %1
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @listFirst(i32* %5)
  store i32* %6, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %4
  %9 = load i32*, i32** %2, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @listDelNode(i32* %9, i32* %10)
  br label %4

12:                                               ; preds = %4
  ret void
}

declare dso_local i32* @listFirst(i32*) #1

declare dso_local i32 @listDelNode(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
